--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,33 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* The designs were created to the following widths:
+  - Mobile: 375px
+  - Desktop: 1440px */
+
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
+
+:root {
+  /* TYPOGRAPHY */
+  /* Body Copy - Font size (paragraph): 16px */
+
+  --font-ubuntu: 'Ubuntu', sans-serif;
+
+  /* PRIMARY COLORS */
+  --primary-marine-blue: hsl(213, 96%, 18%);
+  --primary-purplish-blue: hsl(243, 100%, 62%);
+  --primary-pastel-blue: hsl(228, 100%, 84%);
+  --primary-light-blue: hsl(206, 94%, 87%);
+  --primary-strawberry-red: hsl(354, 84%, 57%);
+
+  /* NEUTRAL COLORS */
+  --neutral-cool-gray: hsl(231, 11%, 63%);
+  --neutral-light-gray: hsl(229, 24%, 87%);
+  --neutral-magnolia: hsl(217, 100%, 97%);
+  --neutral-alabaster: hsl(231, 100%, 99%);
+  --neutral-white: hsl(0, 0%, 100%);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  font-family: var(--font-ubuntu);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
