style: add reset page style

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 /* The designs were created to the following widths:
   - Mobile: 375px
   - Desktop: 1440px */
-
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
 
 :root {
   /* TYPOGRAPHY */
