--- a/src/components/StepsMenu/style.module.css
+++ b/src/components/StepsMenu/style.module.css
@@ -1,27 +1,63 @@
 .stepsMenu {
-    background-color: red;
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    position: relative;
 }
 
 ul {
-    background-color: red;
+    position: absolute;
+    padding: 1.5em 1.25em;
+    list-style: none;
+    width: 100%;
+    max-height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 li {
-    background-color: purple;
+    height: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-bottom: 1em;    
 }
 
 button {
-    background-color: blue;
+    padding: 0.5em 0.9em;
+    height: fit-content;
+    margin: auto 0;
+    margin-right: 1em;    
+    border-radius: 10em;
+    background-color: transparent;
+    font-weight: 900;
+    color: var(--neutral-alabaster);
+    border: 1px solid var(--neutral-alabaster);
+}
+
+button:active {
+    background-color: var(--neutral-light-gray);
+    color: var(--primary-marine-blue);
+}
+
+.stepsDescription {
+    margin: auto 0;
 }
 
 p {
-    color: green;
+    font-size: small;
+    color: var(--neutral-cool-gray);
+    padding-bottom: 0.25em;
 }
 
 h3 {
-    color: gray;
+    color: var(--neutral-alabaster);
+    text-transform: uppercase;
 }
 
 img {
-    width: 5em;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
 }
